--- a/templates/product.html
+++ b/templates/product.html
@@ -1,1 +1,10 @@
-{{ product.title }}
+{% extends "base.html" %}
+{% block title %}{{ product.title }}{% endblock %}
+{% block head %}{{ super() }}{% endblock %}
+{% block content %}
+		<h1>Product: {{ product.id }}</h1>
+		<img src='http://www.swingpaints.com/images/lg/{{ product.id }}.jpg'>
+		<p>{{ product.text|safe }}</p>
+		<h2>Directions:</h2>
+		<p>{{ product.dir|safe }}</p>
+{% endblock %}
