--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
 	{% endblock %}
 	</head>
 	<body>
+	{% block sidebar %}
+		sidebar :)
+	{% endblock %}
 	{% block content %}{% endblock %}
 	</body>
 </html>
