--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,30 @@
 	<head>
 	{% block head %}
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 		<title>{% block title %}{% endblock %}</title>
 	{% endblock %}
 	</head>
 	<body>
-	{% block sidebar %}
-		sidebar :)
-	{% endblock %}
-	{% block content %}{% endblock %}
+		<div id="container" style="position:relative">
+			<div id="sidebar">
+			{% block sidebar %}
+				<img align="center" src="http://www.swingpaints.com/images/Swing Side.jpg" width="159" height="69"><br>
+				<i style="font-size:9px;color:#FFFF00">NEW&nbsp;</i>
+				<a href="/category.php?type=nontoxic&id=8" class="noscript2">Non-Toxic Products</a></br>&#183;</br>
+				<a href="/category.php?type=oils&id=14" class="noscript2">Finishing Oils</a></br>&#183;</br>
+				<a href="/category.php?type=poly&id=14" class="noscript2">Varnishes &amp; Polyurethanes</a></br>&#183;</br>
+				<a href="/category.php?type=remover&id=10" class="noscript2">Paint &amp; Varnish Removers</a></br>&#183;</br>
+				<a href="/category.php?type=primer&id=6" class="noscript2">Paint &amp; Wallpaper Primers</a></br>&#183;</br>
+				<a href="/category.php?type=special&id=9" class="noscript2">Specialty Paints &amp; Coatings</a></br>&#183;</br>
+				<a href="/category.php?type=waxes&id=9" class="noscript2">Waxes, Polishers &amp; Cleaners</a></br>&#183;</br>
+				<a href="/category.php?type=stain&id=6" class="noscript2">Wood Stains &amp; Varnish Stains</a></br>&#183;</br>
+				<a href="/category.php?type=accessories&id=8" class="noscript2">Accessories</a>
+			{% endblock %}
+			</div>
+			<div id="content" style="position:relative;float:left;width:700px">
+			{% block content %}{% endblock %}
+			</div>
+		</div>
 	</body>
 </html>
