--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 			(document, 'script', 'facebook-jssdk'));
 		</script>
 		<div id="header">
-			{% block header %}
+		{% block header %}
 			<a href="/about">ABOUT SWING PAINTS</a> &#x7c;
 			<a href="/locations">WHERE TO BUY</a> &#x7c;
 			<a href="/faq">FAQ</a> &#x7c;
@@ -29,23 +29,28 @@
 			<a href="/marketing">MARKETING AND SALES ASSISTANCE</a> &#x7c;
 			<b><a href="/home">HOME</a></b>
 			<img src="{{ url_for('static', filename='headerswing.png') }}" width="172px" height="37px">
-			{% endblock %}
+		{% endblock %}
 		</div>
 		<div id="sidebar">
-			{% block sidebar %}
-				<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br>
-				<i style="font-size:9px;color:#FFFF00">NEW&nbsp;</i>
-				<a href="/category/nontoxic">Non-Toxic Products</a></br>&#183;</br>
-				<a href="/category/oils">Finishing Oils</a></br>&#183;</br>
-				<a href="/category/poly">Varnishes &amp; Polyurethanes</a></br>&#183;</br>
-				<a href="/category/remover">Paint &amp; Varnish Removers</a></br>&#183;</br>
-				<a href="/category/primer">Paint &amp; Wallpaper Primers</a></br>&#183;</br>
-				<a href="/category/special">Specialty Paints &amp; Coatings</a></br>&#183;</br>
-				<a href="/category/waxes">Waxes, Polishers &amp; Cleaners</a></br>&#183;</br>
-				<a href="/category/stain">Wood Stains &amp; Varnish Stains</a></br>&#183;</br>
-				<a href="/category/accessories">Accessories</a>
-			{% endblock %}
-			</div>
+		{% block sidebar %}
+			<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br>
+			<i style="font-size:9px;color:#FFFF00">NEW&nbsp;</i>
+			<a href="/category/nontoxic">Non-Toxic Products</a></br>&#183;</br>
+			<a href="/category/oils">Finishing Oils</a></br>&#183;</br>
+			<a href="/category/poly">Varnishes &amp; Polyurethanes</a></br>&#183;</br>
+			<a href="/category/remover">Paint &amp; Varnish Removers</a></br>&#183;</br>
+			<a href="/category/primer">Paint &amp; Wallpaper Primers</a></br>&#183;</br>
+			<a href="/category/special">Specialty Paints &amp; Coatings</a></br>&#183;</br>
+			<a href="/category/waxes">Waxes, Polishers &amp; Cleaners</a></br>&#183;</br>
+			<a href="/category/stain">Wood Stains &amp; Varnish Stains</a></br>&#183;</br>
+			<a href="/category/accessories">Accessories</a>
+		{% endblock %}
+		</div>
+		<div id="category">
+		{% block category %}
+			<img src="{{ url_for('static', filename='paint_varnish_top.png') }}" WIDTH=590 HEIGHT=29></img>
+		{% endblock %}
+		</div>
 		<div id="container">
 			<div id="content" style="position:relative;float:left;width:700px">
 			{% block content %}{% endblock %}
