--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 		{% endblock %}
 		</div>
 		<div id="container">
-			<div id="content" style="position:relative;float:left;width:700px">
+			<div id="content">
 			{% block content %}{% endblock %}
 			</div>
 			<div id="footer">
