--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% block title %}{{ product.title }}{% endblock %}
 {% block content %}
-		<h1>Product: {{ product.id }}</h1>
-		<img src='http://www.swingpaints.com/images/lg/{{ product.id }}.jpg'>
-		<p>{{ product.text|safe }}</p>
+<div id="text">{{ product.text|safe }}</div>
+<div id="image"><img src='http://www.swingpaints.com/images/lg/{{ product.id }}.jpg'></div>
+<script type='text/javascript'>
+	$(document).ready(function(){
+		setTimeout(function(){
+			var txt = $("#image").width();
+			var txt2 = 555 - txt
+			$("#text").css('width', txt2);
+		}, 1000);
+	});
+</script>
 {% endblock %}
