--- a/templates/product.html
+++ b/templates/product.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}{{ product.title }}{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='paint_varnish_top.png') }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
 {% block content %}
 <div id="text">{{ product.text|safe }}</div>
 <div id="image"><img src='http://www.swingpaints.com/images/lg/{{ product.id }}.jpg'></div>
