--- a/templates/marketing.html
+++ b/templates/marketing.html
@@ -50,5 +50,5 @@ Our in-house design group will work closely with you to achieve the professional
 After the graphics are approved we can insert the proper label verbage for you &#8208; in as many languages as you require.
 Whether you want to test this in 1 store or 300 stores, we&#39;ll be happy to create a program that is the best fit for your needs.<br>
 <br>
-For more information contact the appropriate department <a href="a_contact_swing.htm">HERE</a></p>
+For more information contact the appropriate department <a href="contact">HERE</a></p>
 {% endblock %}
