--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,10 @@
 			</div>
 			<div id="footer">
 				<a href="/forum.asp" class="noscript">INTERACTIVE FORUM</a> |
-				<a href="/a_coupon.htm" class="noscript">SWING COUPONS</a> |
-				<a href="/newsletter.php" class="noscript" target="_BLANK">NEWSLETTER</a> |
-				<a href="/refer.php" class="noscript" target="_BLANK">REFER A FRIEND</a> |
-				<a href="/a_free_brochure.php" class="noscript">FREE BROCHURE</a>
+				<!--<a href="/coupon" class="noscript">SWING COUPONS</a> |-->
+				<a href="/newsletter" class="noscript" target="_BLANK">NEWSLETTER</a> |
+				<a href="/refer" class="noscript" target="_BLANK">REFER A FRIEND</a> |
+				<a href="/brochure" class="noscript">FREE BROCHURE</a>
 				<div id="facebook">
 					<div class="fb-like" data-href="http://www.facebook.com/circa1850" data-send="false" data-layout="button_count" data-width="285" data-show-faces="false" data-action="recommend" data-font="lucida grande"></div>
 				</div>
