--- a/templates/category.html
+++ b/templates/category.html
@@ -2,5 +2,9 @@
 {% block title %}{{ category.title }}{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename=category.img) }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
 {% block content %}
-
+<ul>
+{% for x in category.products: %}
+	<li>{{ category.products[x] }}</li>
+{% endfor %}
+</ul>
 {% endblock %}
