--- a/templates/category.html
+++ b/templates/category.html
@@ -2,9 +2,16 @@
 {% block title %}{{ category.title }}{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename=category.img) }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
 {% block content %}
-<ul>
+<table><tr>
 {% for x in category.products: %}
-	<li>{{ category.products[x] }}</li>
+<td valign="top" style="font-size: 10px">
+	<div align="center">
+		<a href="/product/{{ x }}">
+			<img src="http://swingpaints.com/images/tn/{{ x }}.jpg" width="102" height="102" alt="{{ category.products[x] }}" title="{{ category.products[x] }}">
+		</a><br>
+		{{ category.products[x] | safe }}
+	</div>
+</td>
 {% endfor %}
-</ul>
+</tr></table>
 {% endblock %}
