--- a/templates/category.html
+++ b/templates/category.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
-{% block title %}{{ category.title }}{% endblock %}
+{% block title %}{{ category.title | safe }}{% endblock %}
 {% block category %}<img src="{{ url_for('static', filename=category.img) }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
 {% block content %}
 <table><tr>
 {% for x in category.products: %}
-{% if loop.index is divisibleby(6) %}</tr><tr>{% endif %}
 <td valign="top" style="font-size: 10px;width:112px;text-align:center">
 	<a href="../product/{{ x }}">
 		<img src="http://swingpaints.com/images/tn/{{ x }}.jpg" width="102" height="102" alt='{{ category.products[x] | replace("<br>"," ") }}' title='{{ category.products[x] | replace("<br>"," ") }}'>
 	</a><br>{{ category.products[x] | safe }}
 </td>
+{% if loop.index is divisibleby(5) %}</tr><tr>{% endif %}
 {% endfor %}
 </tr></table>
 {% endblock %}
