--- a/templates/product.html
+++ b/templates/product.html
@@ -13,7 +13,7 @@
 		$("#text").css('width', txt2);
 	});
 </script>
-</div><div id="container2">
+</div><div id="container2" style="width:580px">
 <div id="info">
 	<div style="width:50%;position:absolute;left:0px;top:0px;text-align:left;font-weight:bold">
 	{% for item in product.info2: %}
