fix category base route links

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,15 +35,15 @@
 		{% block sidebar %}
 			<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br>
 			<i style="font-size:9px;color:#FFFF00">NEW&nbsp;</i>
-			<a href="category/nontoxic">Non-Toxic Products</a></br>&#183;</br>
-			<a href="category/oils">Finishing Oils</a></br>&#183;</br>
-			<a href="category/poly">Varnishes &amp; Polyurethanes</a></br>&#183;</br>
-			<a href="category/remover">Paint &amp; Varnish Removers</a></br>&#183;</br>
-			<a href="category/primer">Paint &amp; Wallpaper Primers</a></br>&#183;</br>
-			<a href="category/special">Specialty Paints &amp; Coatings</a></br>&#183;</br>
-			<a href="category/waxes">Waxes, Polishers &amp; Cleaners</a></br>&#183;</br>
-			<a href="category/stain">Wood Stains &amp; Varnish Stains</a></br>&#183;</br>
-			<a href="category/accessories">Accessories</a>
+			<a href="/category/nontoxic">Non-Toxic Products</a></br>&#183;</br>
+			<a href="/category/oils">Finishing Oils</a></br>&#183;</br>
+			<a href="/category/poly">Varnishes &amp; Polyurethanes</a></br>&#183;</br>
+			<a href="/category/remover">Paint &amp; Varnish Removers</a></br>&#183;</br>
+			<a href="/category/primer">Paint &amp; Wallpaper Primers</a></br>&#183;</br>
+			<a href="/category/special">Specialty Paints &amp; Coatings</a></br>&#183;</br>
+			<a href="/category/waxes">Waxes, Polishers &amp; Cleaners</a></br>&#183;</br>
+			<a href="/category/stain">Wood Stains &amp; Varnish Stains</a></br>&#183;</br>
+			<a href="/category/accessories">Accessories</a>
 		{% endblock %}
 		</div>
 		<div id="category">{% block category %}{% endblock %}</div>
