--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
-  super()
+  {{ super() }}
   <style>
     body { background-color:#C1C1C1; }
   </style>
