--- a/templates/404.html
+++ b/templates/404.html
@@ -10,5 +10,14 @@
 			The file you were searching for was not found on this server.<br><br>
 			Le fichier que vous cherchiez n'a pas été trouvée sur ce serveur.
 		</div>
+		<script>
+			function goBack()
+			  {
+			  window.history.back()
+			  }
+		</script>
+		<div>
+			[<a href="/home">Return to Home</a>] | [<a onclick="goBack{}">Back</a>]
+		</div>
 	</body>
 </html>
