--- a/templates/404.html
+++ b/templates/404.html
@@ -16,8 +16,8 @@
 			  window.history.back()
 			  }
 		</script>
-		<div>
-			[<a href="/home">Return to Home</a>] | [<a onclick="goBack{}">Back</a>]
+		<div style="text-align:center;">
+			[<a style=":hover={text-decoration:underline}" href="/home">Return to Home</a>] | [<a href="#" onclick="goBack{}">Back</a>]
 		</div>
 	</body>
 </html>
