--- a/templates/404.html
+++ b/templates/404.html
@@ -4,6 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+		<style>
+			div a:hover={text-decoration:underline}" 
+		</style>
 	</head>
 	<body bgcolor="#C1C1C1">
 		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
@@ -17,7 +20,7 @@
 			  }
 		</script>
 		<div style="text-align:center;">
-			[<a style=":hover={text-decoration:underline}" href="/home">Return to Home</a>] | [<a href="#" onclick="goBack{}">Back</a>]
+			[<a href="/home">Return to Home</a>] | [<a href="#" onclick="goBack{}">Back</a>]
 		</div>
 	</body>
 </html>
