--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 		<style>
-			div a:hover={text-decoration:underline}" 
+			div a:hover{text-decoration:underline}
 		</style>
 	</head>
 	<body bgcolor="#C1C1C1">
