--- a/templates/404.html
+++ b/templates/404.html
@@ -9,18 +9,12 @@
 		</style>
 	</head>
 	<body bgcolor="#C1C1C1">
-		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
+		<div align="center" style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
 			The file you were searching for was not found on this server.<br><br>
 			Le fichier que vous cherchiez n'a pas été trouvée sur ce serveur.
 		</div>
-		<script>
-			function goBack()
-			  {
-			  window.history.back()
-			  }
-		</script>
 		<div style="text-align:center;">
-			[<a href="/home">Return to Home</a>] | [<a href="#" onclick="goBack{}">Back</a>]
+			[<a href="/home">Return to Home</a>] | [<a href="javascript:history.back()">Back</a>]
 		</div>
 	</body>
 </html>
