--- a/templates/404.html
+++ b/templates/404.html
@@ -5,15 +5,16 @@
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 		<style>
-			div a:hover{text-decoration:underline}
+			div{text-align:center;}
+			div a:hover{text-decoration:underline;}
 		</style>
 	</head>
 	<body bgcolor="#C1C1C1">
-		<div align="center" style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
+		<div style="color:#FFFFFF;font-weight:bold;padding:100px;font-size:36px;">
 			The file you were searching for was not found on this server.<br><br>
 			Le fichier que vous cherchiez n'a pas été trouvée sur ce serveur.
 		</div>
-		<div style="text-align:center;">
+		<div>
 			[<a href="/home">Return to Home</a>] | [<a href="javascript:history.back()">Back</a>]
 		</div>
 	</body>
