--- a/templates/404.html
+++ b/templates/404.html
@@ -15,7 +15,7 @@
 			Le fichier que vous cherchiez n'a pas été trouvée sur ce serveur.
 		</div>
 		<div>
-			[<a href="/home">Return to Home</a>] | [<a href="javascript:history.back()">Back</a>]
+			[<a href="/home">Home|Acceuil</a>][<a href="javascript:history.back()">Back|Retour</a>]
 		</div>
 	</body>
 </html>
