--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>Peintures Swing Paints - Page Not Found</title>
+		<title>Peintures Swing Paints - Erreur 404 Error</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
