--- a/templates/500.html
+++ b/templates/500.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			[ <a href="/home">Home | Acceuil</a> ]<br>
-			[ <a href="javascript:history.back()">Back | Retour</a> ]
+			[ <a href="javascript:history.back()">Back | Retour</a> ]<br>
 			[ <a href="javascript:location.reload()">Reload | Recharger</a> ]
 		</div>
 	</body>
