--- a/templates/category.html
+++ b/templates/category.html
@@ -6,8 +6,8 @@
 {% for x in category.products: %}
 <td valign="top" style="font-size: 10px;width:112px;text-align:center">
 	<a href="../product/{{ x }}">
-		<img src="http://swingpaints.com/images/tn/{{ x }}.jpg" width="102" height="102" alt='{{ category.products[x] | replace("<br>"," ") }}' title='{{ category.products[x] | replace("<br>"," ") }}'>
-	</a><br>{{ category.products[x] | safe }}
+		<img src="http://swingpaints.com/images/tn/{{ x }}.jpg" width="102" height="102" alt='{{ category.products[x] | replace("<br />"," ") }}' title='{{ category.products[x] | replace("<br />"," ") }}'>
+	</a><br />{{ category.products[x] | safe }}
 </td>
 {% if loop.index is divisibleby(5) %}</tr><tr>{% endif %}
 {% endfor %}
