--- a/templates/frenchproduct.html
+++ b/templates/frenchproduct.html
@@ -17,7 +17,7 @@
 <div id="info">
 	<div style="width:50%;position:absolute;left:0px;top:0px;text-align:left;font-weight:bold">
 	{% for item in product.info2: %}
-		&#8226;{{ item | safe }}<br>
+		&#8226;{{ item | safe }}<br />
 	{% endfor %}
 	</div>
 	<div id="infotable" style="position:absolute;right:0px;top:0px;width:50%"><table style="text-align:center;font-size:10px;width:100%">
