--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
 		</div>
 		<div id="sidebar">
 		{% block sidebar %}
-			<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br>
+			<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br />
 			<i style="font-size:9px;color:#FFFF00">NEW&nbsp;</i>
 			<a href="/category/nontoxic">Non-Toxic Products</a></br>&#183;</br>
 			<a href="/category/oils">Finishing Oils</a></br>&#183;</br>
