--- a/templates/marketing.html
+++ b/templates/marketing.html
@@ -4,51 +4,51 @@
 {% block category %}<img src="{{ url_for('static', filename='marketing_top.png') }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
 {% block content %}
 <p style="margin-top:0px;text-align:left;font-size:10px;font-family:Verdana,Arial,Helvetica,sans-serif">
-<b>Promotions</b><br>
+<b>Promotions</b><br />
 Swing Paints is constantly issuing press releases to the trade 
 concerning its new and innovative products. As well, both trade 
 and consumer print ads run throughout the year to help keep our 
 brand names highly visible. Swing Paints also participates in 
 a variety of trade shows and woodworking shows across Canada, 
 the United States and the UK. Swing Paints is also the proud sponsor 
-of The Kids Corner at the Canadian Home Workshop Show. <br>
-<br>
-<b>Point of Purchase</b><br>
+of The Kids Corner at the Canadian Home Workshop Show. <br />
+<br />
+<b>Point of Purchase</b><br />
 Materials Swing Paints offers a variety of take-away brochures, 
 sample boards, shelf talkers, header signs, rebate coupons and 
-other materials to assist in the product sale.<br>
-<br>
-<b>Photos & Literature</b> <br>
+other materials to assist in the product sale.<br />
+<br />
+<b>Photos & Literature</b> <br />
 A complete set of 4-colour photos is available to you to promote 
 the Swing Paints line. Product information sheets detail the preparation 
-and uses of our complete line to assist in your sale.<br>
-<br>
-<b>MSDS</b><br>
+and uses of our complete line to assist in your sale.<br />
+<br />
+<b>MSDS</b><br />
 Material Safety Data Sheets are available on our complete line 
 upon request.  <a href="mailto:info@swingpaints.com">Request MSDS</a>
-<br>
-<br>
-<b>Sales Support and Customer Service</b><br>
+<br />
+<br />
+<b>Sales Support and Customer Service</b><br />
 Our team of trained representatives is ready and able to assist 
 you in any way possible. Each one has years of experience in the 
 coatings field. Swing Paints also offers refinishing classes to 
-both the trade and consumers. <br>
-<br>
-<b>Co-op Advertising</b><br>
+both the trade and consumers. <br />
+<br />
+<b>Co-op Advertising</b><br />
 Contact your sales representative or the customer service department 
-for the latest information on Co-op advertising.<br>
-<br>
-<b>Packaging</b><br>
+for the latest information on Co-op advertising.<br />
+<br />
+<b>Packaging</b><br />
 We are always working to make sure that the OUTSIDE look of our 
 product line matches the quality of the product contained INSIDE. 
 As well, we are continuously updating instructions and information 
-on products to make them extremely consumer-friendly.<br>
-<br>
-<b>Private Label Options</b><br>
+on products to make them extremely consumer-friendly.<br />
+<br />
+<b>Private Label Options</b><br />
 All products manufactured by Swing Paints are available for private label. No minimums required - 1 case or 100 cases.
 Our in-house design group will work closely with you to achieve the professional look you need.
 After the graphics are approved we can insert the proper label verbage for you &#8208; in as many languages as you require.
-Whether you want to test this in 1 store or 300 stores, we&#39;ll be happy to create a program that is the best fit for your needs.<br>
-<br>
+Whether you want to test this in 1 store or 300 stores, we&#39;ll be happy to create a program that is the best fit for your needs.<br />
+<br />
 For more information contact the appropriate department <a href="contact">HERE</a></p>
 {% endblock %}
