--- a/templates/frenchbase.html
+++ b/templates/frenchbase.html
@@ -35,14 +35,14 @@
 		{% block sidebar %}
 			<img align="center" src="{{ url_for('static', filename='categoryswing.png') }}" width="159" height="69"><br />
 			<i style="font-size:9px;color:#FFFF00">NOUVEAU&nbsp;</i>
-			<a href="/category/nontoxic?french">Produits Non-Toxiques</a></br>&#183;</br>
-			<a href="/category/oils?french">Huiles de Finition</a></br>&#183;</br>
-			<a href="/category/poly?french">Huiles, Vernis &amp; Polyur&#xe9;thanes</a></br>&#183;</br>
-			<a href="/category/remover?french">D&#xe9;capants pour Peintures &amp; Vernis</a></br>&#183;</br>
-			<a href="/category/primer?french">Appr&#xeA;ts pour Peinture &amp; Tapisserie</a></br>&#183;</br>
-			<a href="/category/special?french">Peintures &amp; Rev&#xeA;tements Sp&#xe9;ciaux</a></br>&#183;</br>
-			<a href="/category/waxes?french">Cires, Polis, &amp; Nettoyeurs</a></br>&#183;</br>
-			<a href="/category/stain?french">Teinture &#xE0; Bois Teinture Vernis</a></br>&#183;</br>
+			<a href="/category/nontoxic?french">Produits Non-Toxiques</a><br />&#183;<br />
+			<a href="/category/oils?french">Huiles de Finition</a><br />&#183;<br />
+			<a href="/category/poly?french">Huiles, Vernis &amp; Polyur&#xe9;thanes</a><br />&#183;<br />
+			<a href="/category/remover?french">D&#xe9;capants pour Peintures &amp; Vernis</a><br />&#183;<br />
+			<a href="/category/primer?french">Appr&#xeA;ts pour Peinture &amp; Tapisserie</a><br />&#183;<br />
+			<a href="/category/special?french">Peintures &amp; Rev&#xeA;tements Sp&#xe9;ciaux</a><br />&#183;<br />
+			<a href="/category/waxes?french">Cires, Polis, &amp; Nettoyeurs</a><br />&#183;<br />
+			<a href="/category/stain?french">Teinture &#xE0; Bois Teinture Vernis</a><br />&#183;<br />
 			<a href="/category/accessories?french">Accessoires</a>
 		{% endblock %}
 		</div>
