--- a/templates/marketing.html
+++ b/templates/marketing.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}{{ super() }}<style>b {color:#1D432F;}</style>{% endblock %}
 {% block title %}Swing Paints - Marketing{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='marketing_top.png') }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='marketing_top.png') }}" WIDTH=590 HEIGHT=29>{% endblock %}
 {% block content %}
 <p style="margin-top:0px;text-align:left;font-size:10px;font-family:Verdana,Arial,Helvetica,sans-serif">
 <b>Promotions</b><br />
