--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Swing Paints - About{% endblock %}
-{% block category %}<img src="{{ url_for('static', filename='about_swing_top.png') }}" WIDTH=590 HEIGHT=29></img>{% endblock %}
+{% block category %}<img src="{{ url_for('static', filename='about_swing_top.png') }}" WIDTH=590 HEIGHT=29>{% endblock %}
 {% block content %}
 <p align="justify" style="background:url({{ url_for('static', filename='about_bk.jpg') }});background-repeat:no-repeat;font-size:10px;width:580px;height:282px;margin-top:0px">
 Swing Paints Limited is a family-owned business that has been operating in Canada since 1965. The company's manufacturing is concentrated on a site in Montreal adjacent to the Lachine Canal, a historic industrial location. Swing Paints currently distributes throughout Canada, the United States, the United Kingdom, and Ireland.
