--- a/templates/frenchbase.html
+++ b/templates/frenchbase.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 	<head>
 	{% block head %}
+		<meta charset="UTF-8">
 		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='frenchstyle.css') }}">
